src/test/deca/syntax/valid/lex/boolean.deca
// Description:
//    Programme minimaliste lisant des booleans
//
// Resultats:
//      ok
//
// Historique:
//    cree le 01/01/2022

true
false


