src/test/deca/syntax/invalid/lex/includemissing1.deca
// Description:
//    Programme minimaliste utilisant faux include
//
// Resultats:
//    token recognition error at: '#include \n'
//
// Historique:
//    cree le 01/01/2022


// il manque le nom du fichier 
#include 
